<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/host_name_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/host_name" />

        <EditText
            android:id="@+id/host_name_edit_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_toEndOf="@+id/host_name_text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/num_rounds_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/num_rounds" />

        <TextView
            android:id="@+id/current_num_rounds_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/default_num_rounds" />

        <ImageView
            android:id="@+id/num_rounds_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/num_rounds_text"
            android:gravity="center"
            android:onClick="handleIconOnClick"
            app:srcCompat="@android:drawable/ic_menu_info_details" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:id="@+id/num_rounds_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:max="4"
            android:min="1"
            android:paddingBottom="15dp"
            android:progress="3" />

        <TextView
            android:id="@+id/num_rounds_starting_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/min_rounds" />

        <TextView
            android:id="@+id/num_rounds_ending_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/max_rounds" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/time_round" />

        <TextView
            android:id="@+id/current_time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/default_time" />

        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/time_text"
            android:gravity="center"
            android:onClick="handleIconOnClick"
            app:srcCompat="@android:drawable/ic_menu_info_details" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SeekBar
        android:id="@+id/time_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:min="30"
        android:max="90"
        android:progress="60" />

        <TextView
            android:id="@+id/time_starting_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/min_time" />

        <TextView
            android:id="@+id/time_ending_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/max_time" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/num_words_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/num_word_person" />

        <ImageView
            android:id="@+id/num_words_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/num_words_text"
            android:gravity="center"
            android:onClick="handleIconOnClick"
            app:srcCompat="@android:drawable/ic_menu_info_details" />
        <Spinner
            android:id="@+id/num_words_spinner"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/get_room_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
        />
    </RelativeLayout>
</LinearLayout>