<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finalScoreConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalScoreActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalCenterGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/finalScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/final_score_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#6A8D92"
        android:contentDescription="@string/background_color"
        app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
        app:layout_constraintEnd_toEndOf="@+id/verticalCenterGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalScoreTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/backgroundRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#80B192"
        android:contentDescription="@string/background_color"
        app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalCenterGuideline"
        app:layout_constraintTop_toBottomOf="@+id/finalScoreTitle" />

    <TextView
        android:id="@+id/team1Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/team_1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/verticalCenterGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundLeft" />

    <TextView
        android:id="@+id/team2Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/team_2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalCenterGuideline"
        app:layout_constraintTop_toTopOf="@+id/backgroundRight" />

    <TextView
        android:id="@+id/team1TotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundLeft"
        app:layout_constraintEnd_toEndOf="@+id/backgroundLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1Layout"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/team2TotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalCenterGuideline"
        app:layout_constraintTop_toBottomOf="@+id/team2Layout"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/team1Trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundLeft"
        app:layout_constraintStart_toStartOf="@+id/team1TotalScore"
        app:layout_constraintTop_toBottomOf="@+id/team1TotalScore" />

    <TextView
        android:id="@+id/team2Trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRight"
        app:layout_constraintEnd_toEndOf="@+id/team2TotalScore"
        app:layout_constraintTop_toBottomOf="@+id/team2TotalScore" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="handlePlayAgain"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>