<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerGivingClueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/clue_round_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/clue_round_rule_sign"
                android:layout_width="40dp"
                android:layout_height="28dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:contentDescription="currentRoundRULES"
                android:onClick="onClickRule"
                app:srcCompat="@drawable/info_icon_grey" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clue_words_left_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:text="words left" />

            <TextView
                android:id="@+id/clue_words_left_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="center"
                android:text="15" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clue_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="34sp"
            android:layout_marginTop="30dp"

            android:text="" />

        <TextView
            android:id="@+id/clue_guessing_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="70dp" />

        <TextView
            android:id="@+id/clue_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="00 : 00" />

        <TextView
            android:id="@+id/clue_currentScore_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_marginTop="90dp"
            android:text="@string/current_score" />

        <TextView
            android:id="@+id/clue_currentScore_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:text="3" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"

        android:orientation="horizontal">

        <Button
            android:id="@+id/clue_btn_skip"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:background="@drawable/btn_with_radius_skip"
            android:gravity="center"
            android:text="@string/skip" />

        <Button
            android:id="@+id/clue_btn_correct"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:background="@drawable/btn_with_radius_correct"
            android:gravity="center"
            android:text="@string/correct" />
    </LinearLayout>
</LinearLayout>